--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.donate.charity.donate"
         minSdkVersion 19
@@ -10,12 +10,19 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        android.compileOptions.sourceCompatibility 1.8
+        android.compileOptions.targetCompatibility 1.8
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -26,8 +33,21 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:design:26.1.0'
     testCompile 'junit:junit:4.12'
 
     compile 'joda-time:joda-time:2.9.4'
+    compile group: 'com.google.guava', name: 'guava', version: '15.0'
+
+    compile('com.google.android.gms:play-services-analytics:11.0.4') {
+        force = true;
+    }
+    compile('com.google.android.gms:play-services-ads:11.0.4') {
+        force = true;
+    }
+    compile('com.google.android.gms:play-services-gcm:11.0.4') {
+        force = true;
+    }
 }
+
+
